--- a/views/editForm.ejs
+++ b/views/editForm.ejs
@@ -1,21 +1,21 @@
 <%include ./partials/navbar%>
 
-<form method='post' action='/students/<%=student._id%>/update'>
-    <div>
+<form class='col-md-8 col-md-offset-2' method='post' action='/students/<%=student._id%>/update'>
+    <div class=' form-group'>
         <label for="name">Name</label>
-        <input type="text" name="name" value="<%=student.name || ''%>">
+        <input type="text" name="name" value="<%=student.name || ''%>" class='form-control'>
     </div>
-     <div>
+     <div class='form-group'>
         <label for="email">Email</label>
-        <input type="text" name="email" value="<%=student.email || ''%>">
+        <input type="text" name="email" value="<%=student.email || ''%>" class='form-control'>
     </div>
-     <div>
+     <div class='form-group'>
         <label for="course">Course</label>
-        <input type="text" name="course" value="<%=student.course || ''%>">
+        <input type="text" name="course" value="<%=student.course || ''%>" class='form-control'>
     </div>
-     <div>
+     <div class='form-group'>
         <label for="level">Year</label>
-        <select name = 'year'>
+        <select name = 'year' class='form-control'>
         <%for (var i = 1; i < 6;i++){%>
               <%   var selected = student.year === i ? 'selected': ''%>
              <option value="<%=i%>" <%=selected%> >
