--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,20 +1,23 @@
 <%include ./partials/navbar%>
-<form method='post' action='/students'>
-    <div>
+
+<div class='container'>
+
+    <form class='col-md-8 col-md-offset-2'method='post' action='/students'>
+    <div class='form-group'>
         <label for="name">Name</label>
-        <input type="text" name="name" value="">
+        <input type="text" name="name" value="" class='form-control'>
     </div>
-     <div>
+     <div class='form-group'>
         <label for="email">Email</label>
-        <input type="text" name="email" value="">
+        <input type="text" name="email" value="" class='form-control'>
     </div>
-     <div>
+     <div class='form-group'>
         <label for="course">Course</label>
-        <input type="text" name="course" value="">
+        <input type="text" name="course" value="" class='form-control'>
     </div>
-     <div>
+     <div class='form-group'>
         <label for="level">Year</label>
-        <select name = 'year'>
+        <select name = 'year' class='form-control'>
             <%for (var i = 1; i < 6;i++){%>
              <option value="<%=i%>">
              <%=i * 100%>Level
@@ -23,8 +26,12 @@
         </select>
     </div>
     <div>
-        <input type="submit" name="" value="Add">
+        <button class='btn btn-success' type="submit">
+        <span class='glyphicon glyphicon-plus'></span>
+          <strong> ADD STUDENT</strong></button>  
     </div>
-</form>
+</form>    
+</div>
+
 
 <%include ./partials/footer%>
