--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,19 +4,44 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" type="" href="/css/bootstrap.min.css">
     </head>
     <body>
-    <%if(error){%>
-        <div>
-           <h3><%=error%></h3>
+    <nav class='navbar navbar-inverse navbar-fixed'>
+    <div class='container'>
+        <div class='navbar-header'>
+            <a href="/" class='navbar-brand'>ALC Students Resource</a>
         </div>
+        <div class='collapse navbar-collapse'>
+            <ul class='nav navbar-nav'>
+
+                <li><a href="/students">Students</a></li>
+                <li><a href="/students/new">Add Student</a></li>
+            </ul>
+        </div>
+        
+    </div>
+        
+    </nav>
+    <div class='container text-center'>
+        
+    <div class='col-md-8 col-md-offset-2'>
+    <%if(error && error.length > 0){%>
+    <% error.forEach(e => {%>
+
+    <div class='alert alert-danger'><%=e%><a class='close' data-dismiss='alert'>&times;</a></div>
+    <%})%>
+          
+        
     <%}%>
     
-    <%if(success){%>
-    <div>
-         <h3><%=success%></h3>
-    </div>
+    <%if(success && success.length > 0){%>
+   
+         <div class='alert alert-success'><%=success%><a class='close'  data-dismiss='alert'>&times;</a></div>
+    
          
     <%}%>
+    </div>
+   
+     </div>
   
