--- a/views/students.ejs
+++ b/views/students.ejs
@@ -31,6 +31,30 @@
   <%})%>
       </tbody>
       </table>
+
+    <div>
+    <div class='text-center'>
+
+          
+        
+         <%if(page > 1){%>
+           
+            <a class='btn btn-primary'href="/students/page/<%=page-1%>">
+            <span class='glyphicon glyphicon-chevron-left'></span> Prev
+            </a>
+       <%}%>
+     <span class='lead'> <%=count%> Total Results in <%=pages%> pages</span> 
+        <%if(page < pages){%>
+            
+            <a class='btn btn-primary' href="/students/page/<%=page+1%>">
+              Next
+            <span class='glyphicon glyphicon-chevron-right'></span>
+            </a>
+       <%}%>
+    </div>
+ 
+    </div>
+
 </div>
    
 <%include ./partials/footer%>
