--- a/views/editForm.ejs
+++ b/views/editForm.ejs
@@ -26,7 +26,7 @@
         </select>
     </div>
     <div>
-        <input type="submit" name="" value="Update">
+        <input type="submit" class='btn btn-success' name="" value="Update">
     </div>
 </form>
 
