--- a/views/student.ejs
+++ b/views/student.ejs
@@ -1,18 +1,22 @@
 <%include ./partials/navbar%>
  <div class='container'>
-     <div class='col-md-8 col-md-offset-2 text-center'>
-        <div class='thumbnail'>
-            <img src="" alt="student image"> 
-        </div>
+     <div class='col-md-6 col-md-offset-3 text-center'>
+            <div class='thumbnail'>
+                <img src="<%=student.gravatar%>" alt="student image"> 
+            </div>
 
-     <div class='caption-full'>
-            <h4>Name:- <%=student.name%></h4>
-            <h4>Email:- <%=student.email%></h4>
-            <h4>Course of Study:- <%=student.course%></h4>
-            <h4>Current Year :- <%=student.year%></h4>
-            <a href="/students/<%=student._id%>/edit" class='btn btn-info btn-lg'> 
-            <span class='glyphicon glyphicon-edit'></span> Edit</a>
-    </div>
+        <div class='caption-full'>
+            <div class='list-group'>
+                <h4 class='list-group-item'>Name:- <%=student.name%></h4>
+                    <h4 class='list-group-item'>Email:- <%=student.email%></h4>
+                    <h4 class='list-group-item'>Course of Study:- <%=student.course%></h4>
+                    <h4 class='list-group-item'>Current Year :- <%=student.year%></h4>
+            </div>
+                
+                <a href="/students/<%=student._id%>/edit" class='btn btn-info'> 
+                <span class='glyphicon glyphicon-edit'></span> Edit</a>
+                <a href="/students" class='btn btn-warning'>Back</a>
+        </div>
    
      </div>
 
