made minor changes and added comments where necessary

--- a/views/students.ejs
+++ b/views/students.ejs
@@ -1,6 +1,6 @@
 <%include ./partials/navbar%>
 <div class='container'>
-     <table class='table table-bordered table-striped'>
+     <table class='table table-bordered table-striped table-responsive table-condensed'>
         <thead>
         <tr>
         <td>Name</td>
