--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,16 +3,21 @@
     <head>
         <title></title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="" href="/css/bootstrap.min.css">
     </head>
     <body>
     <nav class='navbar navbar-inverse navbar-fixed'>
     <div class='container'>
         <div class='navbar-header'>
+            <button type="" class='navbar-toggle collapsed' data-toggle='collapse' data-target='#menu'>
+                <span class='icon-bar'></span>
+                <span class='icon-bar'></span>
+                <span class='icon-bar'></span>
+            </button>
             <a href="/" class='navbar-brand'>ALC Students Resource</a>
         </div>
-        <div class='collapse navbar-collapse'>
+        <div  id='menu' class='collapse navbar-collapse'>
             <ul class='nav navbar-nav'>
 
                 <li><a href="/students">Students</a></li>
