--- a/views/students.ejs
+++ b/views/students.ejs
@@ -49,7 +49,7 @@
             <span class='glyphicon glyphicon-chevron-left'></span> Prev
             </a>
        <%}%>
-     <span class='lead'> <%=count%> Total Results in <%=pages%> pages</span> 
+     <span class='lead'> <%=count%> Results in <%=pages%> pages</span> 
         <%if(page < pages){%>
             
             <a class='btn btn-primary' href="/students/page/<%=page+1%>">
